// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: transform slot > dynamic slots name 1`] = `
"
  const n4 = _createComponent(Comp, null, {
    $: [
      () => ({
        name: name,
        fn: () => {
          const n1 = _createNodes(() => (foo))
          return n1
        }
      })
    ]
  }, true)
  return n4
"
`;

exports[`compiler: transform slot > dynamic slots name w/ v-for 1`] = `
"
  const n4 = _createComponent(Comp, null, {
    $: [
      () => (_createForSlots(list, (item) => ({
        name: item,
        fn: (_slotProps0) => {
          const n1 = _createNodes(() => (_slotProps0["bar"]))
          return n1
        }
      })))
    ]
  }, true)
  return n4
"
`;

exports[`compiler: transform slot > dynamic slots name w/ v-if / v-else[-if] 1`] = `
"
  const n13 = _createComponent(Comp, null, {
    $: [
      () => (condition
        ? {
          name: "condition",
          fn: () => {
            const n1 = t0()
            return n1
          }
        }
        : anotherCondition
          ? {
            name: "condition",
            fn: (_slotProps0) => {
              const n4 = t1()
              return n4
            }
          }
          : otherCondition
            ? {
              name: "condition",
              fn: () => {
                const n7 = t2()
                return n7
              }
            }
            : {
              name: "condition",
              fn: () => {
                const n10 = t3()
                return n10
              }
            })
    ]
  }, true)
  return n13
"
`;

exports[`compiler: transform slot > implicit default slot 1`] = `
"
  const n1 = _createComponent(Comp, null, {
    "default": () => {
      const n0 = t0()
      return n0
    }
  }, true)
  return n1
"
`;

exports[`compiler: transform slot > named slots w/ comment 1`] = `
"
  const n6 = _createComponent(Comp, null, {
    "one": () => {
      const n3 = t0()
      return n3
    }
  }, true)
  return n6
"
`;

exports[`compiler: transform slot > nested component slot 1`] = `
"
  const n1 = _createComponent(A, null, {
    "default": () => {
      const n0 = _createComponent(B)
      return n0
    }
  }, true)
  return n1
"
`;

exports[`compiler: transform slot > nested slots scoping 1`] = `
"
  const n11 = _createComponent(Comp, null, {
    "default": (_slotProps0) => {
      const n5 = _createComponent(Inner, null, {
        "default": (_slotProps1) => {
          const n3 = _createNodes(() => (_slotProps0["foo"] + _slotProps1["bar"] + baz))
          return n3
        }
      })
      const n7 = _createNodes(() => (_slotProps0["foo"] + bar + baz))
      return [n5, n7]
    }
  }, true)
  return n11
"
`;

exports[`compiler: transform slot > on component dynamically named slot 1`] = `
"
  const n1 = _createComponent(Comp, null, {
    $: [
      () => ({
        name: named,
        fn: (_slotProps0) => {
          const n0 = _createNodes(() => (_slotProps0["foo"] + bar))
          return n0
        }
      })
    ]
  }, true)
  return n1
"
`;

exports[`compiler: transform slot > on component named slot 1`] = `
"
  const n1 = _createComponent(Comp, null, {
    "named": (_slotProps0) => {
      const n0 = _createNodes(() => (_slotProps0["foo"] + bar))
      return n0
    }
  }, true)
  return n1
"
`;

exports[`compiler: transform slot > on-component default slot 1`] = `
"
  const n1 = _createComponent(Comp, null, {
    "default": (_slotProps0) => {
      const n0 = _createNodes(() => (_slotProps0["foo"] + bar))
      return n0
    }
  }, true)
  return n1
"
`;

exports[`compiler: transform slot > quote slot name 1`] = `
"
  const n1 = _createComponent(Comp, null, {
    "nav-bar-title-before": () => {
      return null
    }
  }, true)
  return n1
"
`;
